--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "near-api-js": "~0.41.0",
     "react": "~17.0.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "~17.0.1",
     "regenerator-runtime": "~0.13.5"
   },
