--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "parcel-bundler": "~1.12.4",
     "react-test-renderer": "~17.0.1",
     "sass": "^1.43.3",
-    "shelljs": "~0.8.4"
+    "shelljs": "~0.8.4",
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "@emotion/react": "^11.7.0",
