--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gh-pages": "~3.1.0",
     "jest": "~26.6.2",
     "jest-environment-node": "~26.6.2",
-    "near-cli": "~1.6.0",
+    "near-cli": "^3.0.0",
     "nodemon": "~2.0.3",
     "parcel-bundler": "~1.12.4",
     "react-test-renderer": "~17.0.1",
@@ -32,11 +32,17 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.1",
+    "@mui/lab": "^5.0.0-alpha.58",
+    "@mui/material": "^5.0.0",
+    "@types/react": "^16.8.6 || ^17.0.0",
+    "date-fns": "^2.25.0",
+    "dayjs": "^1.10.7",
+    "luxon": "^1.28.0 || ^2.0.0",
+    "moment": "^2.29.1",
     "near-api-js": "~0.41.0",
-    "react": "~17.0.1",
+    "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "~17.0.1",
+    "react-dom": "^17.0.2",
     "regenerator-runtime": "~0.13.5"
   },
   "resolutions": {
