--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^16.8.6 || ^17.0.0",
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
+    "js-base64": "^3.7.2",
     "luxon": "^1.28.0 || ^2.0.0",
     "moment": "^2.29.1",
     "near-api-js": "~0.41.0",
