--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "~7.14.0",
     "@babel/preset-react": "~7.13.13",
     "babel-jest": "~26.6.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "env-cmd": "~10.1.0",
     "gh-pages": "~3.1.0",
     "jest": "~26.6.2",
@@ -46,10 +47,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
-    "regenerator-runtime": "^0.13.7"
-  },
-  "resolutions": {
-    "@babel/preset-env": "7.13.8"
+    "regenerator-runtime": "^0.13.9"
   },
   "jest": {
     "moduleNameMapper": {
