--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://QuicSwap.github.io/multicall-UI",
+  "homepage": "http://quicswap.github.io/multicall-UI",
   "name": "multicall-UI",
   "version": "0.1.0",
   "license": "UNLICENSED",
@@ -17,7 +17,6 @@
     "@babel/preset-env": "~7.14.0",
     "@babel/preset-react": "~7.13.13",
     "babel-jest": "~26.6.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "env-cmd": "~10.1.0",
     "gh-pages": "~3.1.0",
     "jest": "~26.6.2",
@@ -32,6 +31,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/runtime": "^7.16.3",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
