--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "regenerator-runtime": "^0.13.9"
   },
   "jest": {
