upgrade dependencies to latest

--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "test": "jest test --runInBand"
   },
   "devDependencies": {
-    "@babel/core": "~7.14.0",
-    "@babel/preset-env": "~7.14.0",
-    "@babel/preset-react": "~7.13.13",
-    "babel-jest": "~26.6.2",
+    "@babel/core": "^7.17.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-jest": "^27.5.1",
     "env-cmd": "~10.1.0",
-    "gh-pages": "~3.1.0",
-    "jest": "~26.6.2",
-    "jest-environment-node": "~26.6.2",
+    "gh-pages": "^3.2.3",
+    "jest": "^27.5.1",
+    "jest-environment-node": "^27.5.1",
     "near-cli": "^3.0.0",
     "nodemon": "~2.0.3",
     "parcel-bundler": "~1.12.4",
@@ -43,7 +43,7 @@
     "js-base64": "^3.7.2",
     "luxon": "^1.28.0 || ^2.0.0",
     "moment": "^2.29.1",
-    "near-api-js": "~0.41.0",
+    "near-api-js": "^0.44.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
