revert version upgrades from mui library

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
-    "@mui/lab": "^5.0.0-alpha.58",
-    "@mui/material": "^5.0.0",
+    "@mui/lab": "5.0.0-alpha.59",
+    "@mui/material": "5.2.3",
     "@types/react": "^16.8.6 || ^17.0.0",
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
