enable pages, fix header on HashRouter, add bn.js as dependency

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@types/bn.js": "^5.1.0",
     "babel-jest": "^27.5.1",
     "env-cmd": "~10.1.0",
     "gh-pages": "^3.2.3",
@@ -38,6 +39,7 @@
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.0.0",
     "@types/react": "^16.8.6 || ^17.0.0",
+    "bn.js": "^5.2.0",
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
     "js-base64": "^3.7.2",
