switch to parcel v2, upgrade deps to latest

--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "version": "0.1.0",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "npm run build:web",
+    "build": "yarn build:web",
     "build:web": "parcel build src/index.html --public-url ./",
     "deploy:pages": "gh-pages -d dist/",
-    "deploy": "npm run build && npm run deploy:pages",
+    "deploy": "yarn build && yarn deploy:pages",
     "start": "echo The app is starting! It will automatically open in your browser when ready && parcel src/index.html --open",
-    "dev": "nodemon --watch contract -e ts --exec \"npm run start\"",
+    "dev": "nodemon --watch contract -e ts --exec \"yarn start\"",
     "test": "jest test --runInBand"
   },
   "devDependencies": {
     "@babel/core": "^7.17.7",
-    "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@parcel/transformer-sass": "2.4.0",
     "@types/bn.js": "^5.1.0",
     "babel-jest": "^27.5.1",
     "env-cmd": "~10.1.0",
@@ -24,7 +24,7 @@
     "jest-environment-node": "^27.5.1",
     "near-cli": "^3.0.0",
     "nodemon": "~2.0.3",
-    "parcel-bundler": "~1.12.4",
+    "process": "^0.11.10",
     "react-test-renderer": "~17.0.1",
     "sass": "^1.43.3",
     "shelljs": "~0.8.4",
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "^7.16.3",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
@@ -46,6 +48,7 @@
     "luxon": "^1.28.0 || ^2.0.0",
     "moment": "^2.29.1",
     "near-api-js": "^0.44.2",
+    "parcel": "^2.4.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
