--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.7",
     "@babel/preset-react": "^7.16.7",
-    "@parcel/transformer-sass": "2.4.0",
+    "@parcel/transformer-sass": "^2.4.1",
     "@types/bn.js": "^5.1.0",
     "babel-jest": "^27.5.1",
     "env-cmd": "~10.1.0",
@@ -25,7 +25,7 @@
     "near-cli": "^3.0.0",
     "nodemon": "~2.0.3",
     "process": "^0.11.10",
-    "react-test-renderer": "~17.0.1",
+    "react-test-renderer": "^18.0.0",
     "sass": "^1.43.3",
     "shelljs": "~0.8.4",
     "typescript": "^4.5.2"
@@ -40,7 +40,7 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.0.0",
-    "@types/react": "^16.8.6 || ^17.0.0",
+    "@types/react": "^18.0.0",
     "bn.js": "^5.2.0",
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
@@ -49,9 +49,9 @@
     "moment": "^2.29.1",
     "near-api-js": "^0.44.2",
     "parcel": "^2.4.0",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.0",
     "react-router-dom": "6",
     "regenerator-runtime": "^0.13.9"
   },
