--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-test-renderer": "^18.0.0",
     "sass": "^1.43.3",
     "shelljs": "~0.8.4",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "util": "^0.12.4"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.16.4",
