fetch all branches in gh actions

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -29,6 +29,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js v16
         uses: actions/setup-node@v2
@@ -50,7 +52,7 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
 
-      # copy CNAME from gh-pages branch to ./dist
+      # copy CNAME from gh-pages branch to current ./dist
       - name: copy CNAME
         run: |
           git checkout gh-pages "CNAME"
