update wallet integration, ability to sign multiple TXs

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@babel/core": "^7.17.7",
     "@babel/preset-react": "^7.16.7",
     "@parcel/transformer-sass": "^2.4.1",
-    "@types/bn.js": "^5.1.0",
     "babel-jest": "^28.0.2",
     "env-cmd": "~10.1.0",
     "gh-pages": "^3.2.3",
@@ -42,7 +41,7 @@
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.0.0",
     "@types/react": "^18.0.0",
-    "bn.js": "^5.2.0",
+    "borsh": "^0.7.0",
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
     "js-base64": "^3.7.2",
