--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.17.7",
     "@babel/preset-react": "^7.16.7",
     "@parcel/transformer-sass": "^2.4.1",
+    "@types/big.js": "^6.1.3",
     "babel-jest": "^28.0.2",
     "env-cmd": "~10.1.0",
     "gh-pages": "^4.0.0",
@@ -41,6 +42,7 @@
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.0.0",
     "@types/react": "^18.0.0",
+    "big.js": "^6.1.1",
     "borsh": "^0.7.0",
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
@@ -48,7 +50,6 @@
     "luxon": "^1.28.0 || ^2.0.0",
     "moment": "^2.29.1",
     "near-api-js": "^0.44.2",
-    "near-units": "^0.1.9",
     "parcel": "^2.4.0",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
