--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "version": "0.1.0",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "yarn build:web",
-    "build:web": "parcel build src/index.html --public-url ./",
-    "deploy:pages": "echo 'multicall.app' > ./dist/CNAME && gh-pages -d dist/",
+    "build": "parcel build src/index.html --public-url ./",
+    "build:testnet": "NEAR_ENV=testnet yarn build",
+    "build:mainnet": "NEAR_ENV=mainnet yarn build",
+    "deploy:pages": "echo 'testnet.multicall.app' > ./dist/CNAME && gh-pages -d dist/",
     "deploy": "yarn build && yarn deploy:pages",
     "start": "echo The app is starting! It will automatically open in your browser when ready && parcel src/index.html --open",
+    "start:testnet": "NEAR_ENV=testnet yarn start",
+    "start:mainnet": "NEAR_ENV=mainnet yarn start",
     "dev": "nodemon --watch contract -e ts --exec \"yarn start\"",
     "test": "jest test --runInBand"
   },
