--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "version": "0.1.0",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "yarn build:web",
-    "build:web": "parcel build src/index.html --public-url ./",
-    "deploy:pages": "echo 'multicall.app' > ./dist/CNAME && gh-pages -d dist/",
+    "build": "parcel build src/index.html --public-url ./",
+    "build:testnet": "NEAR_ENV=testnet yarn build",
+    "build:mainnet": "NEAR_ENV=mainnet yarn build",
+    "deploy:pages": "echo 'testnet.multicall.app' > ./dist/CNAME && gh-pages -d dist/",
     "deploy": "yarn build && yarn deploy:pages",
     "start": "echo The app is starting! It will automatically open in your browser when ready && parcel src/index.html --open",
+    "start:testnet": "NEAR_ENV=testnet yarn start",
+    "start:mainnet": "NEAR_ENV=mainnet yarn start",
     "dev": "nodemon --watch contract -e ts --exec \"yarn start\"",
     "test": "jest test --runInBand"
   },
   "devDependencies": {
     "@babel/core": "^7.17.7",
     "@babel/preset-react": "^7.16.7",
+    "@netlify/plugin-lighthouse": "^2.1.3",
     "@parcel/transformer-sass": "^2.4.1",
     "@types/big.js": "^6.1.3",
     "babel-jest": "^28.0.2",
