make netlify deploy preview on Testnet

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
+# Deploy Preview context: All Deploy Previews
+# will inherit these settings.
+[context.deploy-preview]
+  command = "yarn build:testnet"
+
 [[plugins]]
   package = "@netlify/plugin-lighthouse"
 
