--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@netlify/plugin-lighthouse": "^2.1.3",
     "@parcel/transformer-sass": "^2.4.1",
     "@types/big.js": "^6.1.3",
+    "@types/lodash.debounce": "^4.0.7",
     "babel-jest": "^28.0.2",
     "env-cmd": "~10.1.0",
     "gh-pages": "^4.0.0",
@@ -51,6 +52,7 @@
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
     "js-base64": "^3.7.2",
+    "lodash.debounce": "^4.0.8",
     "luxon": "^1.28.0 || ^2.0.0",
     "moment": "^2.29.1",
     "near-api-js": "^0.44.2",
