--- a/package.json
+++ b/package.json
@@ -46,6 +46,11 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.0.0",
+    "@near-wallet-selector/core": "^5.0.0",
+    "@near-wallet-selector/modal-ui": "^5.0.0",
+    "@near-wallet-selector/my-near-wallet": "^5.0.0",
+    "@near-wallet-selector/near-wallet": "^5.0.0",
+    "@near-wallet-selector/sender": "^5.0.0",
     "@types/react": "^18.0.0",
     "big.js": "^6.2.1",
     "borsh": "^0.7.0",
@@ -61,7 +66,8 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "6",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "rxjs": "^7.5.6"
   },
   "jest": {
     "moduleNameMapper": {
