--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "regenerator-runtime": "^0.13.9",
     "rxjs": "^7.5.6"
   },
+  "resolutions": {
+    "near-api-js": "0.45.1"
+  },
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/fileMock.js",
