--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.0.0",
     "@near-wallet-selector/core": "^5.0.0",
+    "@near-wallet-selector/math-wallet": "^5.0.0",
     "@near-wallet-selector/modal-ui": "^5.0.0",
     "@near-wallet-selector/my-near-wallet": "^5.0.0",
     "@near-wallet-selector/near-wallet": "^5.0.0",
