--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lodash.debounce": "^4.0.8",
     "luxon": "^1.28.0 || ^2.0.0",
     "moment": "^2.29.4",
+    "nanoid": "^4.0.0",
     "near-api-js": "^0.45.1",
     "parcel": "^2.4.0",
     "react": "^18.0.0",
