--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "luxon": "^1.28.0 || ^2.0.0",
     "moment": "^2.29.4",
     "near-api-js": "^0.45.1",
+    "object-hash": "^3.0.0",
     "parcel": "^2.4.0",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
