--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "start:testnet": "NEAR_ENV=testnet yarn start",
     "start:mainnet": "NEAR_ENV=mainnet yarn start",
     "dev": "nodemon --watch contract -e ts --exec \"yarn start\"",
-    "test": "jest test --runInBand",
-    "postinstall": "patch-package"
+    "test": "jest test --runInBand"
   },
   "devDependencies": {
     "@babel/core": "^7.17.7",
     "@babel/preset-react": "^7.16.7",
-    "@netlify/plugin-lighthouse": "^2.1.3",
+    "@netlify/plugin-lighthouse": "^3.2.0",
     "@parcel/transformer-sass": "^2.4.1",
     "@types/big.js": "^6.1.5",
     "@types/lodash.debounce": "^4.0.7",
@@ -60,8 +59,6 @@
     "near-api-js": "^0.45.1",
     "object-hash": "^3.0.0",
     "parcel": "^2.4.0",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.0.0",
