--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,9 @@
 	"singleQuote": false,
 	"tabWidth": 4,
 	"trailingComma": "es5",
-	"useTabs": false
+	"useTabs": false,
+	"bracketSpacing": true,
+	"bracketSameLine": false,
+	"singleAttributePerLine": true,
+	"htmlWhitespaceSensitivity": "strict"
 }
