--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start:mainnet": "NEAR_ENV=mainnet yarn start",
     "dev": "nodemon --watch contract -e ts --exec \"yarn start\"",
     "test": "jest test --runInBand",
-    "fmt": "eslint --fix ./"
+    "fmt": "eslint --fix ./",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/core": "^7.17.7",
@@ -39,7 +40,8 @@
     "sass": "^1.43.3",
     "shelljs": "~0.8.4",
     "typescript": "^4.5.2",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.16.4",
