--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
         "target": "es5",
         "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
-        "jsx": "react",
         "skipLibCheck": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
@@ -18,7 +17,7 @@
         "noEmit": true,
         "noImplicitAny": true,
         "noImplicitThis": true,
-        "strictNullChecks": true,
+        "strictNullChecks": true
     },
     "include": ["src"]
 }
