--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
         "@near-wallet-selector/sender": "^5.0.0",
         "@types/react": "^18.0.0",
         "big.js": "^6.2.1",
+        "effector": "^22.3.0",
+        "effector-forms": "^0.0.24",
         "js-base64": "^3.7.2",
         "lodash.debounce": "^4.0.8",
         "near-api-js": "^0.45.1",
