--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@parcel/transformer-sass": "^2.4.1",
         "@types/big.js": "^6.1.5",
         "@types/lodash.debounce": "^4.0.7",
+        "@types/react-dom": "^18.0.6",
         "@typescript-eslint/parser": "^5.36.1",
         "babel-jest": "^28.0.2",
         "env-cmd": "~10.1.0",
