Feature/token balances dao (#158)
* add Table.tsx and Tabs.tsx

* add Fungible Token contract class

* remove DAO references in Fungible Token class

* add RPC method to fetch basic account Info

* add token balances table + restructure dao page

* Fix prettier issues

* Add NEP-145 class and integrate it with NEP-141

* chore: Add missing `key` props & Fix naming

* chore: Apply formatting

* chore: Use named exports & Apply formatting

* chore: Use consistent fs structure

* Allow to pass arbitrary content into table row cells

* Add NEAR SVG icon

* Update NEAR SVG icon styles

* feat: Update token balances table

* Create components namespace for tokens
& Add token label component

* Add generic NEAR token SVG icon

* feat: Use token label component

* wip: Rework tabs

* wip: Rework dao page layout

* chore: Clarify naming

* wip: Update tab buttons style

* wip: Center pending animation and error message

* fix: Add undefined table row workaround

* Update token label component

* chore: Use consistent field name for `Multicall` address

* chore: Add equality check for `Args`
& Add sub-account address getter for `ArgsAccount`

* Create separate FT balances component placeholder

* chore: Fix Args equality checker

* chore: Use named export

* feat: Implement fungible token balances lazy loading

* Fix generic token icon rendering

* chore: Move balances conversion into model

* chore: Remove empty unused file

* wip: Fix loader styles

* wip: Allow to pass nullish values as table rows

* feat: Add loading animation for balances

* update styling

* chore: Use `clsx`

* fix: Implement `.hidden` as global utility class

* Fix tabs styling issues

* feat: Make cards content scrollable

* wip: Fix tabs styles

* upgrade to TS6, format token amounts less than min display amounts

* wip: Rework `Table` component

* add TS type to DAO page context

* chore: Add Todo Tree ext

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es6",
         "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
-        "jsx": "react",
+        "jsx": "react-jsx",
         "skipLibCheck": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
@@ -17,7 +17,7 @@
         "noEmit": true,
         "noImplicitAny": true,
         "noImplicitThis": true,
-        "strictNullChecks": true,
+        "strictNullChecks": true
     },
     "include": ["src"]
 }
