chore: Enable full ESM support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "homepage": "http://near-multicall.github.io/ui",
     "name": "ui",
+    "type": "module",
     "version": "0.1.0",
     "license": "UNLICENSED",
     "scripts": {
