add file hiding extension to recommendations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,131 @@
     "[scss]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
         "editor.formatOnSave": true
-    }
+    },
+    "hidefiles.configurationType": "local",
+    "hidefiles.globalConfig": {
+        "profiles": [
+            {
+                "name": "Default",
+                "detail": "",
+                "description": "Test",
+                "hidden": [".vscode/", ".github/", ".husky/", ".parcel-cache/", "dist/"]
+            },
+            {
+                "name": "Strict",
+                "detail": "Hide everything not immediately required",
+                "hidden": ["$Default", "$NoConfigs", "$NoEntryPoints"]
+            },
+            {
+                "hidden": [
+                    "yarn.lock",
+                    "tsconfig.json",
+                    "yarn-error.log",
+                    "README.md",
+                    "netlify.toml",
+                    "LICENSE",
+                    "netlify.toml",
+                    "babel.config.json",
+                    ".prettierrc",
+                    ".prettierignore",
+                    ".nvmrc",
+                    ".gitignore",
+                    ".eslintignore",
+                    ".asdfrc",
+                    "netlify.toml"
+                ],
+                "name": "NoConfigs",
+                "description": "",
+                "detail": "",
+                "peek": []
+            },
+            {
+                "hidden": [
+                    "src/entities/fungible-token/index.ts",
+                    "src/entities/native-token/index.ts",
+                    "src/entities/wallet/index.ts",
+                    "src/entities/index.ts",
+                    "src/families/index.js",
+                    "src/families/index.js",
+                    "src/pages/app/index.tsx",
+                    "src/pages/dao/index.tsx",
+                    "src/shared/ui/components/dialog/index.ts",
+                    "src/shared/ui/components/facet/index.ts",
+                    "src/shared/ui/components/icons/index.ts",
+                    "src/shared/ui/components/popup-menu/index.ts",
+                    "src/shared/ui/components/scrollable/index.ts",
+                    "src/shared/ui/components/table/index.ts",
+                    "src/shared/ui/components/tabs/index.ts",
+                    "src/shared/ui/components/token-label/index.ts",
+                    "src/shared/ui/components/tooltip/index.ts",
+                    "src/shared/ui/components/index.ts",
+                    "src/widgets/builder/index.ts",
+                    "src/widgets/column/index.ts",
+                    "src/widgets/editor/index.ts",
+                    "src/widgets/export/index.ts",
+                    "src/widgets/layout/index.ts",
+                    "src/widgets/menu/index.ts",
+                    "src/widgets/sidebar/index.ts",
+                    "src/widgets/tokens-balances/index.ts",
+                    "src/widgets/index.ts"
+                ],
+                "name": "NoEntryPoints",
+                "description": "",
+                "detail": "",
+                "peek": []
+            }
+        ]
+    },
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        ".vscode/": true,
+        ".github/": true,
+        ".husky/": true,
+        ".parcel-cache/": true,
+        "dist/": true,
+        "yarn.lock": true,
+        "tsconfig.json": true,
+        "yarn-error.log": true,
+        "README.md": true,
+        "netlify.toml": true,
+        "LICENSE": true,
+        "babel.config.json": true,
+        ".prettierrc": true,
+        ".prettierignore": true,
+        ".nvmrc": true,
+        ".gitignore": true,
+        ".eslintignore": true,
+        ".asdfrc": true,
+        "src/entities/fungible-token/index.ts": true,
+        "src/entities/native-token/index.ts": true,
+        "src/entities/wallet/index.ts": true,
+        "src/entities/index.ts": true,
+        "src/families/index.js": true,
+        "src/pages/app/index.tsx": true,
+        "src/pages/dao/index.tsx": true,
+        "src/shared/ui/components/dialog/index.ts": true,
+        "src/shared/ui/components/facet/index.ts": true,
+        "src/shared/ui/components/icons/index.ts": true,
+        "src/shared/ui/components/popup-menu/index.ts": true,
+        "src/shared/ui/components/scrollable/index.ts": true,
+        "src/shared/ui/components/table/index.ts": true,
+        "src/shared/ui/components/tabs/index.ts": true,
+        "src/shared/ui/components/token-label/index.ts": true,
+        "src/shared/ui/components/tooltip/index.ts": true,
+        "src/shared/ui/components/index.ts": true,
+        "src/widgets/builder/index.ts": true,
+        "src/widgets/column/index.ts": true,
+        "src/widgets/editor/index.ts": true,
+        "src/widgets/export/index.ts": true,
+        "src/widgets/layout/index.ts": true,
+        "src/widgets/menu/index.ts": true,
+        "src/widgets/sidebar/index.ts": true,
+        "src/widgets/tokens-balances/index.ts": true,
+        "src/widgets/index.ts": true
+    },
+    "hidefiles.selectedProfile": "Strict"
 }
