chore: Add Code Spell Checker to VSCode recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,8 @@
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
         "gruntfuggly.todo-tree",
-        "aaron-bond.better-comments"
+        "aaron-bond.better-comments",
+        "streetsidesoftware.code-spell-checker-scientific-terms",
+        "streetsidesoftware.code-spell-checker"
     ]
 }
