Jobs scheduling and UI/UX improvements (#165)
* wip: Rework tabs

* wip: Rework dao page layout

* chore: Clarify naming

* wip: Update tab buttons style

* wip: Center pending animation and error message

* fix: Add undefined table row workaround

* use multicall class in wallet component

* Update token label component

* chore: Use consistent field name for `Multicall` address

* chore: Add equality check for `Args`
& Add sub-account address getter for `ArgsAccount`

* Create separate FT balances component placeholder

* chore: Fix Args equality checker

* chore: Use named export

* feat: Implement fungible token balances lazy loading

* Fix generic token icon rendering

* chore: Move balances conversion into model

* chore: Remove empty unused file

* wip: Fix loader styles

* wip: Allow to pass nullish values as table rows

* feat: Add loading animation for balances

* wip: Add global `disabled` style

* fix: Disable dapp multicall login if DAO has no multicall instance

* chore: Convert `Dialog` to TS FC

* wip: Add regexp URL validation

* chore: Use meaningful naming

* wip: Add `ArgsError` reactivity hook

* wip: Rework `Dialog` in order to support reactive props

* wip: Use reactive `ArgsError` in dApp login dialog

* chore: Use `URL` constructor for URL strings validation

* wip: Use reactive `ArgsError` binding in every dialog

* fix: Display only 1st error message under text field
& Use named MUI imports

* chore: Add proposal existence checker

* feat: Update `ArgsError` reactive API

* fix: Resolve `Dialog` implementation overhead & issues

* wip: Use updated APIs in dialogs

* chore: Add TSDoc comment

* chore: Remove duplicated object key

* chore: Reference reactive value

* wip: Update `LoadFromProposalDialog`

* chore: Clarify naming

* wip: Update errors text

* wip: Fix error handling

* update styling

* chore: Use `clsx`

* fix: Make multicall dApp login

--- a/package.json
+++ b/package.json
@@ -65,23 +65,28 @@
         "@mui/icons-material": "^5.2.0",
         "@mui/lab": "^5.0.0-alpha.58",
         "@mui/material": "^5.0.0",
+        "@mui/x-date-pickers": "^5.0.4",
         "@near-wallet-selector/core": "^5.0.0",
         "@near-wallet-selector/math-wallet": "^5.0.0",
         "@near-wallet-selector/modal-ui": "^5.0.0",
         "@near-wallet-selector/my-near-wallet": "^5.0.0",
         "@near-wallet-selector/near-wallet": "^5.0.0",
         "@near-wallet-selector/sender": "^5.0.0",
+        "@types/luxon": "^3.0.1",
         "@types/react": "^18.0.0",
         "big.js": "^6.2.1",
         "clsx": "^1.2.1",
+        "cron-parser": "^4.6.0",
         "js-base64": "^3.7.2",
         "lodash.debounce": "^4.0.8",
+        "luxon": "^3.0.4",
         "near-api-js": "^0.45.1",
         "object-hash": "^3.0.0",
         "parcel": "^2.4.0",
         "react": "^18.0.0",
         "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^18.0.0",
+        "react-inspector": "^6.0.1",
         "react-router-dom": "6",
         "regenerator-runtime": "^0.13.9",
         "rxjs": "^7.5.6"
