--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,3 @@
 {
-    "recommendations": [
-        "dbaeumer.vscode-eslint",
-        "esbenp.prettier-vscode",
-        "gruntfuggly.todo-tree",
-        "aaron-bond.better-comments",
-        "streetsidesoftware.code-spell-checker-scientific-terms",
-        "streetsidesoftware.code-spell-checker"
-    ]
+    "recommendations": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode"]
 }
