--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "@types/react": "^18.0.0",
         "big.js": "^6.2.1",
         "clsx": "^1.2.1",
+        "formik": "^2.2.9",
         "cron-parser": "^4.6.0",
         "js-base64": "^3.7.2",
         "lodash.debounce": "^4.0.8",
@@ -89,7 +90,8 @@
         "react-inspector": "^6.0.1",
         "react-router-dom": "6",
         "regenerator-runtime": "^0.13.9",
-        "rxjs": "^7.5.6"
+        "rxjs": "^7.5.6",
+        "yup": "^0.32.11"
     },
     "resolutions": {
         "near-api-js": "0.45.1"
