--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,8 @@
 
   # optional, fails build when a category is below a threshold
   [plugins.inputs.thresholds]
-    performance = 0.5
+    # temporarily disable performance bound
+    # performance = 0.5
     accessibility = 0.8
     best-practices = 0.8
     seo = 0.7
