switch to npm for better dedup. Upgrade wallet-selector

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # Deploy Preview context: All Deploy Previews
 # will inherit these settings.
 [context.deploy-preview]
-  command = "yarn build:testnet"
+  command = "npm run build:testnet"
 
 [[plugins]]
   package = "@netlify/plugin-lighthouse"
