--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -41,7 +41,7 @@ jobs:
 
       # install dependencies and apply patches (if any exist)
       - name: install dependencies
-        run: yarn
+        run: npm install
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
@@ -58,7 +58,7 @@ jobs:
         uses: github/codeql-action/analyze@v2
 
       - name: Build
-        run: yarn build
+        run: npm run build
 
       # Deploy, only runs on "push" event on main branch
       - name: Deploy
