Fix TS errors. Add typecheck to pre-commit hook and ci pipeline

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -43,6 +43,10 @@ jobs:
       - name: install dependencies
         run: npm install
 
+      # check for typescript errors
+      - name: typecheck
+        run: npm run typecheck
+
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
