--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "license": "UNLICENSED",
     "scripts": {
         "build": "parcel build src/index.html --public-url ./",
-        "build:testnet": "NEAR_ENV=testnet yarn build",
-        "build:mainnet": "NEAR_ENV=mainnet yarn build",
+        "build:testnet": "NEAR_ENV=testnet npm run build",
+        "build:mainnet": "NEAR_ENV=mainnet npm run build",
         "deploy:pages": "echo 'testnet.multicall.app' > ./dist/CNAME && gh-pages -d dist/",
-        "deploy": "yarn build && yarn deploy:pages",
+        "deploy": "npm run build && npm run deploy:pages",
         "start": "rm -rf .parcel-cache && echo 'The app is starting! It will automatically open in your browser when ready' && parcel src/index.html --open",
-        "start:testnet": "NEAR_ENV=testnet yarn start",
-        "start:mainnet": "NEAR_ENV=mainnet yarn start",
+        "start:testnet": "NEAR_ENV=testnet npm run start",
+        "start:mainnet": "NEAR_ENV=mainnet npm run start",
         "test": "jest test --runInBand",
         "prettier": "prettier --write \"./**/*.{ts,tsx,js,jsx,css,scss,html}\"",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "typecheck": "tsc --noEmit"
     },
     "lint-staged": {
         "*.{ts,tsx}": [
             "eslint --color --max-warnings 0 --no-ignore"
         ],
-        "**/*.{ts,tsx}": "echo 'disabled for now: tsc-files --noEmit'",
         "*.{js,jsx,ts,tsx,json,md}": [
             "prettier --write"
         ]
@@ -51,7 +51,6 @@
         "react-test-renderer": "^18.0.0",
         "sass": "^1.43.3",
         "shelljs": "~0.8.4",
-        "tsc-files": "^1.1.3",
         "typescript": "^4.5.2",
         "util": "^0.12.4"
     },
@@ -66,22 +65,24 @@
         "@mui/lab": "^5.0.0-alpha.58",
         "@mui/material": "^5.0.0",
         "@mui/x-date-pickers": "^5.0.4",
-        "@near-wallet-selector/core": "^5.0.0",
-        "@near-wallet-selector/math-wallet": "^5.0.0",
-        "@near-wallet-selector/modal-ui": "^5.0.0",
-        "@near-wallet-selector/my-near-wallet": "^5.0.0",
-        "@near-wallet-selector/near-wallet": "^5.0.0",
-        "@near-wallet-selector/sender": "^5.0.0",
+        "@near-wallet-selector/core": "^7.3.0",
+        "@near-wallet-selector/modal-ui": "^7.3.0",
+        "@near-wallet-selector/my-near-wallet": "^7.3.0",
+        "@near-wallet-selector/near-wallet": "^7.3.0",
+        "@near-wallet-selector/sender": "^7.3.0",
+        "@types/babel__generator": "^7.6.4",
+        "@types/babel__template": "^7.4.1",
         "@types/luxon": "^3.0.1",
         "@types/react": "^18.0.0",
+        "@types/scheduler": "^0.16.2",
         "big.js": "^6.2.1",
         "clsx": "^1.2.1",
-        "formik": "^2.2.9",
         "cron-parser": "^4.6.0",
+        "formik": "^2.2.9",
         "js-base64": "^3.7.2",
         "lodash.debounce": "^4.0.8",
         "luxon": "^3.0.4",
-        "near-api-js": "^0.45.1",
+        "near-api-js": "^1.1.0",
         "object-hash": "^3.0.0",
         "parcel": "^2.4.0",
         "react": "^18.0.0",
@@ -93,8 +94,8 @@
         "rxjs": "^7.5.6",
         "yup": "^0.32.11"
     },
-    "resolutions": {
-        "near-api-js": "0.45.1"
+    "overrides": {
+        "bn.js": "5.2.1"
     },
     "jest": {
         "moduleNameMapper": {
