--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "typeRoots": ["node_modules/@types", "src/types"],
+        "typeRoots": ["node_modules/@types"],
         "target": "es6",
         "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
@@ -20,5 +20,5 @@
         "noImplicitThis": true,
         "strictNullChecks": true
     },
-    "include": ["src", "near-config.ts"]
+    "include": ["src"]
 }
